<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="dapri.bottomnavnew.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="dapri.bottomnavnew.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_favmusic"
            app:destination="@id/navigation_favmusic" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="dapri.bottomnavnew.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />


    <fragment
        android:id="@+id/navigation_profile"
        android:name="dapri.bottomnavnew.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_favmusic"
        android:name="dapri.bottomnavnew.ui.favmusic.FavmusicFragment"
        android:label="@string/title_favmusic"
        tools:layout="@layout/fragment_favmusic" >
        <action
            android:id="@+id/action_navigation_favmusic_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_favmusic_to_navigation_playlist"
            app:destination="@id/navigation_playlist" />
    </fragment>


    <fragment
        android:id="@+id/navigation_playlist"
        android:name="dapri.bottomnavnew.ui.playlist.PlaylistFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_playlist" >
        <action
            android:id="@+id/action_navigation_playlist_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>


</navigation>